--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -5019,6 +5019,33 @@ a, .btn, .btn-link {
   transition: color 0.3s, background-color 0.3s, border 0.3s;
   text-decoration: none !important; }
 
+.site-footer {
+  background-color: #f5f5f5;
+  padding: 50px 0; }
+  .site-footer .footer-menu ul {
+    margin: 0;
+    list-style: none;
+    margin-bottom: 40px;
+    margin-top: 10px;
+    padding-left: 40px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+       -moz-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+       -moz-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    max-width: 370px;
+    padding: 0; }
+
 .test-bb {
   font-size: 50px;
   display: -webkit-box;
