--- a/styles/scss/layout/_footer.scss
+++ b/styles/scss/layout/_footer.scss
@@ -1,5 +1,18 @@
-// =============================================================================
-//
-// Footer
-//
-// =============================================================================
+.site-footer {
+	background-color: #f5f5f5;
+	padding: 50px 0;
+	.footer-menu {
+		ul {
+			margin: 0;
+			list-style: none;
+			margin-bottom: 40px;
+			margin-top: 10px;
+			padding-left: 40px;
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			max-width: 370px;
+			padding: 0;
+		}
+	}
+}
