--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import "vendors/font-awesome";
+@import "vendors/hamburgers/hamburgers";
 
 // Helpers
 @import "helpers/functions";
